# gemma-translator

./: .gitignore  README.md  example.gemma-translator.yaml  pyproject.toml
docs/: index.html  styles.css
src/gemma_translator/: __init__.py  config.py  main.py  translator.py
